style css update gap issue fixed

--- a/style.css
+++ b/style.css
@@ -1,96 +1,74 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
 
-body{
+body {
     background: #123456;
 }
 
-section{
-    position: relative;
-    width:calc(min(60rem, 90%));
-    margin: 0 auto;
+section {
+    width: 100%;
     min-height: 100vh;
-    column-gap: 3rem;
-    padding-block: min(20vh, 3rem);
-    text-align: center;
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
-
+    padding: 50px 0;
 }
 
-.swiper-container{
-    position: relative;
-    margin: 0;
-    padding: 0;
-}
-
-.swiper{
+.swiper {
     width: 100%;
-    padding: 60px 0 95px 0;
-
+    max-width: 1000px;
+    padding-top: 50px;
+    padding-bottom: 100px;
 }
 
-.swiper-slide{
-    width: 10rem;
-    height: 21rem;
+.swiper-slide {
+    background: transparent;
+    width: 300px !important; /* KEY FIX */
+    height: auto;
     display: flex;
-    flex-direction: column;
-    align-items: self-start;
-    position: relative;
-    
-   
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    border-radius: 12px;
 }
 
-.swiper-slide .swiper-content{
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -45%);
+.swiper-slide img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-
-
-.swiper-slide .swiper-content img{
-    width: 100%;
-    border-radius: 10px;
-}
-
-.swiper-button-prev{
+.swiper-button-prev,
+.swiper-button-next {
     background: white;
     border-radius: 50%;
-    top:47%;
-    left:-30px;
     width: 50px;
     height: 50px;
+    top: 50%;
+    transform: translateY(-50%);
     box-shadow: 0px 2px 11px rgba(0, 0, 0, 0.17);
+    z-index: 10;
 }
 
-.swiper-button-prev::after{
-    content:""
-}
-.swiper-button-prev .bx{
-    font-size: 25px;
-}
-.swiper-button-next{
-    background: white;
-    border-radius: 50%;
-    top:47%;
-    right:-30px;
-    width: 50px;
-    height: 50px;
-    box-shadow: 0px 2px 11px rgba(0, 0, 0, 0.17);
+.swiper-button-prev {
+    left: 15%;
 }
 
-.swiper-button-next::after{
-    content:""
+.swiper-button-next {
+    right: 15%;
 }
-.swiper-button-next .bx{
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+    display: none;
+}
+
+.swiper-button-prev .bx,
+.swiper-button-next .bx {
     font-size: 25px;
 }
 
